protox/src/check/snapshots/protox__check__tests__enum_field_invalid_default-3.snap
---
source: src/check/tests.rs
expression: "check_ok(\"\n        package foo;\n\n        message Message {\n            optional Parent.Foo foo = 1 [default = ZERO];\n        }\n       \n        message Parent {\n            enum Foo {\n                ZERO = 0;\n            }\n        }\")"
---
name: root.proto
package: foo
messageType:
  - name: Message
    field:
      - name: foo
        number: 1
        label: LABEL_OPTIONAL
        type: TYPE_ENUM
        typeName: ".foo.Parent.Foo"
        defaultValue: ZERO
        jsonName: foo
  - name: Parent
    enumType:
      - name: Foo
        value:
          - name: ZERO
            number: 0
sourceCodeInfo:
  location:
    - span:
        - 1
        - 8
        - 11
        - 9
    - path:
        - 2
      span:
        - 1
        - 8
        - 20
    - path:
        - 4
        - 0
      span:
        - 3
        - 8
        - 5
        - 9
    - path:
        - 4
        - 0
        - 1
      span:
        - 3
        - 16
        - 23
    - path:
        - 4
        - 0
        - 2
        - 0
      span:
        - 4
        - 12
        - 57
    - path:
        - 4
        - 0
        - 2
        - 0
        - 1
      span:
        - 4
        - 32
        - 35
    - path:
        - 4
        - 0
        - 2
        - 0
        - 3
      span:
        - 4
        - 38
        - 39
    - path:
        - 4
        - 0
        - 2
        - 0
        - 4
      span:
        - 4
        - 12
        - 20
    - path:
        - 4
        - 0
        - 2
        - 0
        - 6
      span:
        - 4
        - 21
        - 31
    - path:
        - 4
        - 0
        - 2
        - 0
        - 7
      span:
        - 4
        - 51
        - 55
    - path:
        - 4
        - 0
        - 2
        - 0
        - 8
      span:
        - 4
        - 40
        - 56
    - path:
        - 4
        - 1
      span:
        - 7
        - 8
        - 11
        - 9
    - path:
        - 4
        - 1
        - 1
      span:
        - 7
        - 16
        - 22
    - path:
        - 4
        - 1
        - 4
        - 0
      span:
        - 8
        - 12
        - 10
        - 13
    - path:
        - 4
        - 1
        - 4
        - 0
        - 1
      span:
        - 8
        - 17
        - 20
    - path:
        - 4
        - 1
        - 4
        - 0
        - 2
        - 0
      span:
        - 9
        - 16
        - 25
    - path:
        - 4
        - 1
        - 4
        - 0
        - 2
        - 0
        - 1
      span:
        - 9
        - 16
        - 20
    - path:
        - 4
        - 1
        - 4
        - 0
        - 2
        - 0
        - 2
      span:
        - 9
        - 23
        - 24

