protox/src/check/snapshots/protox__check__tests__enum_value_extrema.snap
---
source: src/check/tests.rs
expression: "check_ok(r#\"\n        syntax = \"proto3\";\n\n        enum Extreme {\n            ZERO = 0;\n            MIN = -2147483648;\n            MAX = 2147483647;\n        }\n        \"#)"
---
name: root.proto
enumType:
  - name: Extreme
    value:
      - name: ZERO
        number: 0
      - name: MIN
        number: -2147483648
      - name: MAX
        number: 2147483647
sourceCodeInfo:
  location:
    - span:
        - 1
        - 8
        - 7
        - 9
    - path:
        - 5
        - 0
      span:
        - 3
        - 8
        - 7
        - 9
    - path:
        - 5
        - 0
        - 1
      span:
        - 3
        - 13
        - 20
    - path:
        - 5
        - 0
        - 2
        - 0
      span:
        - 4
        - 12
        - 21
    - path:
        - 5
        - 0
        - 2
        - 0
        - 1
      span:
        - 4
        - 12
        - 16
    - path:
        - 5
        - 0
        - 2
        - 0
        - 2
      span:
        - 4
        - 19
        - 20
    - path:
        - 5
        - 0
        - 2
        - 1
      span:
        - 5
        - 12
        - 30
    - path:
        - 5
        - 0
        - 2
        - 1
        - 1
      span:
        - 5
        - 12
        - 15
    - path:
        - 5
        - 0
        - 2
        - 1
        - 2
      span:
        - 5
        - 18
        - 29
    - path:
        - 5
        - 0
        - 2
        - 2
      span:
        - 6
        - 12
        - 29
    - path:
        - 5
        - 0
        - 2
        - 2
        - 1
      span:
        - 6
        - 12
        - 15
    - path:
        - 5
        - 0
        - 2
        - 2
        - 2
      span:
        - 6
        - 18
        - 28
    - path:
        - 12
      span:
        - 1
        - 8
        - 26
syntax: proto3

