protox/src/check/snapshots/protox__check__tests__map_field_invalid_type.snap
---
source: src/check/tests.rs
expression: "check_ok(r#\"message Message {\n        map<int64, float> int64 = 1;\n        map<uint32, double> uint32 = 2;\n        map<uint64, .Message> uint64 = 3;\n        map<sint32, Message> sint32 = 4;\n        map<sint64, bytes> sint64 = 5;\n        map<fixed32, int64> fixed32 = 6;\n        map<fixed64, uint32> fixed64 = 7;\n        map<sfixed32, sint32> sfixed32 = 8;\n        map<sfixed64, sint64> sfixed64 = 9;\n        map<bool, fixed32> bool = 10;\n        map<string, fixed64> string = 11;\n    }\"#)"
---
{
  "name": "root.proto",
  "messageType": [
    {
      "name": "Message",
      "field": [
        {
          "name": "int64",
          "number": 1,
          "label": "LABEL_REPEATED",
          "type": "TYPE_MESSAGE",
          "typeName": ".Message.Int64Entry",
          "jsonName": "int64"
        },
        {
          "name": "uint32",
          "number": 2,
          "label": "LABEL_REPEATED",
          "type": "TYPE_MESSAGE",
          "typeName": ".Message.Uint32Entry",
          "jsonName": "uint32"
        },
        {
          "name": "uint64",
          "number": 3,
          "label": "LABEL_REPEATED",
          "type": "TYPE_MESSAGE",
          "typeName": ".Message.Uint64Entry",
          "jsonName": "uint64"
        },
        {
          "name": "sint32",
          "number": 4,
          "label": "LABEL_REPEATED",
          "type": "TYPE_MESSAGE",
          "typeName": ".Message.Sint32Entry",
          "jsonName": "sint32"
        },
        {
          "name": "sint64",
          "number": 5,
          "label": "LABEL_REPEATED",
          "type": "TYPE_MESSAGE",
          "typeName": ".Message.Sint64Entry",
          "jsonName": "sint64"
        },
        {
          "name": "fixed32",
          "number": 6,
          "label": "LABEL_REPEATED",
          "type": "TYPE_MESSAGE",
          "typeName": ".Message.Fixed32Entry",
          "jsonName": "fixed32"
        },
        {
          "name": "fixed64",
          "number": 7,
          "label": "LABEL_REPEATED",
          "type": "TYPE_MESSAGE",
          "typeName": ".Message.Fixed64Entry",
          "jsonName": "fixed64"
        },
        {
          "name": "sfixed32",
          "number": 8,
          "label": "LABEL_REPEATED",
          "type": "TYPE_MESSAGE",
          "typeName": ".Message.Sfixed32Entry",
          "jsonName": "sfixed32"
        },
        {
          "name": "sfixed64",
          "number": 9,
          "label": "LABEL_REPEATED",
          "type": "TYPE_MESSAGE",
          "typeName": ".Message.Sfixed64Entry",
          "jsonName": "sfixed64"
        },
        {
          "name": "bool",
          "number": 10,
          "label": "LABEL_REPEATED",
          "type": "TYPE_MESSAGE",
          "typeName": ".Message.BoolEntry",
          "jsonName": "bool"
        },
        {
          "name": "string",
          "number": 11,
          "label": "LABEL_REPEATED",
          "type": "TYPE_MESSAGE",
          "typeName": ".Message.StringEntry",
          "jsonName": "string"
        }
      ],
      "nestedType": [
        {
          "name": "Int64Entry",
          "field": [
            {
              "name": "key",
              "number": 1,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_INT64",
              "jsonName": "key"
            },
            {
              "name": "value",
              "number": 2,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_FLOAT",
              "jsonName": "value"
            }
          ],
          "options": {
            "mapEntry": true
          }
        },
        {
          "name": "Uint32Entry",
          "field": [
            {
              "name": "key",
              "number": 1,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_UINT32",
              "jsonName": "key"
            },
            {
              "name": "value",
              "number": 2,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_DOUBLE",
              "jsonName": "value"
            }
          ],
          "options": {
            "mapEntry": true
          }
        },
        {
          "name": "Uint64Entry",
          "field": [
            {
              "name": "key",
              "number": 1,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_UINT64",
              "jsonName": "key"
            },
            {
              "name": "value",
              "number": 2,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_MESSAGE",
              "typeName": ".Message",
              "jsonName": "value"
            }
          ],
          "options": {
            "mapEntry": true
          }
        },
        {
          "name": "Sint32Entry",
          "field": [
            {
              "name": "key",
              "number": 1,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_SINT32",
              "jsonName": "key"
            },
            {
              "name": "value",
              "number": 2,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_MESSAGE",
              "typeName": ".Message",
              "jsonName": "value"
            }
          ],
          "options": {
            "mapEntry": true
          }
        },
        {
          "name": "Sint64Entry",
          "field": [
            {
              "name": "key",
              "number": 1,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_SINT64",
              "jsonName": "key"
            },
            {
              "name": "value",
              "number": 2,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_BYTES",
              "jsonName": "value"
            }
          ],
          "options": {
            "mapEntry": true
          }
        },
        {
          "name": "Fixed32Entry",
          "field": [
            {
              "name": "key",
              "number": 1,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_FIXED32",
              "jsonName": "key"
            },
            {
              "name": "value",
              "number": 2,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_INT64",
              "jsonName": "value"
            }
          ],
          "options": {
            "mapEntry": true
          }
        },
        {
          "name": "Fixed64Entry",
          "field": [
            {
              "name": "key",
              "number": 1,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_FIXED64",
              "jsonName": "key"
            },
            {
              "name": "value",
              "number": 2,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_UINT32",
              "jsonName": "value"
            }
          ],
          "options": {
            "mapEntry": true
          }
        },
        {
          "name": "Sfixed32Entry",
          "field": [
            {
              "name": "key",
              "number": 1,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_SFIXED32",
              "jsonName": "key"
            },
            {
              "name": "value",
              "number": 2,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_SINT32",
              "jsonName": "value"
            }
          ],
          "options": {
            "mapEntry": true
          }
        },
        {
          "name": "Sfixed64Entry",
          "field": [
            {
              "name": "key",
              "number": 1,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_SFIXED64",
              "jsonName": "key"
            },
            {
              "name": "value",
              "number": 2,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_SINT64",
              "jsonName": "value"
            }
          ],
          "options": {
            "mapEntry": true
          }
        },
        {
          "name": "BoolEntry",
          "field": [
            {
              "name": "key",
              "number": 1,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_BOOL",
              "jsonName": "key"
            },
            {
              "name": "value",
              "number": 2,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_FIXED32",
              "jsonName": "value"
            }
          ],
          "options": {
            "mapEntry": true
          }
        },
        {
          "name": "StringEntry",
          "field": [
            {
              "name": "key",
              "number": 1,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_STRING",
              "jsonName": "key"
            },
            {
              "name": "value",
              "number": 2,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_FIXED64",
              "jsonName": "value"
            }
          ],
          "options": {
            "mapEntry": true
          }
        }
      ]
    }
  ],
  "sourceCodeInfo": {
    "location": [
      {
        "span": [
          0,
          0,
          12,
          5
        ]
      },
      {
        "path": [
          4,
          0
        ],
        "span": [
          0,
          0,
          12,
          5
        ]
      },
      {
        "path": [
          4,
          0,
          1
        ],
        "span": [
          0,
          8,
          15
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0
        ],
        "span": [
          1,
          8,
          36
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          1
        ],
        "span": [
          1,
          26,
          31
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          3
        ],
        "span": [
          1,
          34,
          35
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          6
        ],
        "span": [
          1,
          8,
          25
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          1
        ],
        "span": [
          2,
          8,
          39
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          1,
          1
        ],
        "span": [
          2,
          28,
          34
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          1,
          3
        ],
        "span": [
          2,
          37,
          38
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          1,
          6
        ],
        "span": [
          2,
          8,
          27
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          2
        ],
        "span": [
          3,
          8,
          41
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          2,
          1
        ],
        "span": [
          3,
          30,
          36
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          2,
          3
        ],
        "span": [
          3,
          39,
          40
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          2,
          6
        ],
        "span": [
          3,
          8,
          29
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          3
        ],
        "span": [
          4,
          8,
          40
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          3,
          1
        ],
        "span": [
          4,
          29,
          35
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          3,
          3
        ],
        "span": [
          4,
          38,
          39
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          3,
          6
        ],
        "span": [
          4,
          8,
          28
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          4
        ],
        "span": [
          5,
          8,
          38
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          4,
          1
        ],
        "span": [
          5,
          27,
          33
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          4,
          3
        ],
        "span": [
          5,
          36,
          37
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          4,
          6
        ],
        "span": [
          5,
          8,
          26
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          5
        ],
        "span": [
          6,
          8,
          40
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          5,
          1
        ],
        "span": [
          6,
          28,
          35
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          5,
          3
        ],
        "span": [
          6,
          38,
          39
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          5,
          6
        ],
        "span": [
          6,
          8,
          27
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          6
        ],
        "span": [
          7,
          8,
          41
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          6,
          1
        ],
        "span": [
          7,
          29,
          36
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          6,
          3
        ],
        "span": [
          7,
          39,
          40
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          6,
          6
        ],
        "span": [
          7,
          8,
          28
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          7
        ],
        "span": [
          8,
          8,
          43
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          7,
          1
        ],
        "span": [
          8,
          30,
          38
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          7,
          3
        ],
        "span": [
          8,
          41,
          42
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          7,
          6
        ],
        "span": [
          8,
          8,
          29
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          8
        ],
        "span": [
          9,
          8,
          43
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          8,
          1
        ],
        "span": [
          9,
          30,
          38
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          8,
          3
        ],
        "span": [
          9,
          41,
          42
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          8,
          6
        ],
        "span": [
          9,
          8,
          29
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          9
        ],
        "span": [
          10,
          8,
          37
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          9,
          1
        ],
        "span": [
          10,
          27,
          31
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          9,
          3
        ],
        "span": [
          10,
          34,
          36
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          9,
          6
        ],
        "span": [
          10,
          8,
          26
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          10
        ],
        "span": [
          11,
          8,
          41
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          10,
          1
        ],
        "span": [
          11,
          29,
          35
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          10,
          3
        ],
        "span": [
          11,
          38,
          40
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          10,
          6
        ],
        "span": [
          11,
          8,
          28
        ]
      }
    ]
  }
}
