protox/src/check/snapshots/protox__check__tests__message_reserved_range_message_set.snap
---
source: src/check/tests.rs
expression: "check_ok(r#\"\n        message Foo {\n            reserved 1 to max;\n\n            option message_set_wire_format = true;\n        }\n        \"#)"
---
name: root.proto
messageType:
  - name: Foo
    options:
      messageSetWireFormat: true
    reservedRange:
      - start: 1
        end: 2147483647
sourceCodeInfo:
  location:
    - span:
        - 1
        - 8
        - 5
        - 9
    - path:
        - 4
        - 0
      span:
        - 1
        - 8
        - 5
        - 9
    - path:
        - 4
        - 0
        - 1
      span:
        - 1
        - 16
        - 19
    - path:
        - 4
        - 0
        - 7
      span:
        - 4
        - 12
        - 50
    - path:
        - 4
        - 0
        - 7
        - 1
      span:
        - 4
        - 12
        - 50
    - path:
        - 4
        - 0
        - 9
      span:
        - 2
        - 12
        - 30
    - path:
        - 4
        - 0
        - 9
        - 0
      span:
        - 2
        - 21
        - 29
    - path:
        - 4
        - 0
        - 9
        - 0
        - 1
      span:
        - 2
        - 21
        - 22
    - path:
        - 4
        - 0
        - 9
        - 0
        - 2
      span:
        - 2
        - 26
        - 29

